--- a/public/views/components/navbar.ejs
+++ b/public/views/components/navbar.ejs
@@ -1,36 +1,53 @@
+<link rel="stylesheet" href="/public/css/components/navbar.css" />
 <nav class="container">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#"
-      ><img
-        src="https://getbootstrap.com/docs/5.0/assets/brand/bootstrap-logo.svg"
-        alt=""
-        width="30"
-        height="24"
-        class="d-inline-block align-text-top"
-    /></a>
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-bs-toggle="collapse"
-      data-bs-target="#navbarNav"
-      aria-controls="navbarNav"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
+  <a class="navbar-brand" href="#"
+    ><img
+      src="/public/images/logo.png"
+      alt=""
+      width="auto"
+      height="50"
+      class="d-inline-block align-text-top"
+  /></a>
+
+  <button
+    class="navbar-toggler"
+    type="button"
+    data-bs-toggle="collapse"
+    data-bs-target="#navbarNav"
+    aria-controls="navbarNav"
+    aria-expanded="false"
+    aria-label="Toggle navigation"
+  >
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav m-auto">
+      <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="#"
+          >Página Inicial</a
+        >
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Soluções</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Contato</a>
+      </li>
+    </ul>
+    <ul class="navbar-nav">
+      <%if(user == null){%>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <button class="btn btn-primary"
+          type="button"
+          data-bs-toggle="modal"
+          data-bs-target="#login-modal">Entrar / Cadastrar</button>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
-        </li>
-      </ul>
-    </div>
+        <%}else{%>
+          <li class="nav-item">
+            <a class="btn btn-primary"
+            type="button" href="/profile">Meu Perfil</a>
+          </li>
+          <%}%>
+    </ul>
   </div>
 </nav>
