--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -13,3 +13,10 @@
   width: 100%;
   margin: 0;
 }
+
+:root {
+  --primary-color: #bf26b5;
+  --secondary-color: #bf2a97;
+  --thirdy-color: #8a14d9;
+  --fourth-color: #f25eb0;
+}
