--- a/public/views/components/credito-card.ejs
+++ b/public/views/components/credito-card.ejs
@@ -1,8 +1,8 @@
 <div class="card">
   <div class="card-body">
-    <h5 class="card-title"><%=titulo%></h5>
-    <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-    <p class="card-text"><%=descricao%></p>
-    <a href="#" class="btn btn-primary">Contratar</a>
+    <h5 class="card-title"><%=data.name%></h5>
+    <p class="card-text"><%=data.description%></p>
+    <p class="card-text text-muted"><%=data.tax%>% ao mês</p>
+    <a href="#" class="btn btn-primary" data-id=<%=data.id%>>Contratar</a>
   </div>
 </div>
