--- a/public/views/404.ejs
+++ b/public/views/404.ejs
@@ -7,12 +7,22 @@
     <title>Ops, página não encontrada - CódigoParaTodxs</title>
 
     <link rel="stylesheet" href="/public/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/public/css/styles.css" />
+
     <script src="/public/js/bootstrap.min.js"></script>
   </head>
+  <header class="navbar navbar-expand-lg navbar-light bg-light">
+    <%- include('./components/navbar') %>
+  </header>
   <body>
     <div class="container text-center">
       <p>Página não encontrada - CódigoParaTodxs</p>
       <a href="/">Voltar para a Home</a>
     </div>
   </body>
+
+  <footer>
+    <%- include('./components/login-modal') %> <%-
+    include('./components/register-modal') %>
+  </footer>
 </html>
