--- a/public/views/components/navbar.ejs
+++ b/public/views/components/navbar.ejs
@@ -23,7 +23,7 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav m-auto">
       <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="#"
+        <a class="nav-link active" aria-current="page" href="/"
           >Página Inicial</a
         >
       </li>
