--- a/public/views/components/toast-message.ejs
+++ b/public/views/components/toast-message.ejs
@@ -1,6 +1,6 @@
-<div class="toast align-items-center text-white bg-danger border-0 fade position-fixed top-10 end-0 m-3" role="alert" aria-live="assertive" aria-atomic="true" id="toast" style="z-index: 5">
+<div class="toast align-items-center text-white border-0 fade position-fixed top-10 end-0 m-3 <%=message.type == 'success' ? 'bg-success' : 'bg-danger'%>" role="alert" aria-live="assertive" aria-atomic="true" id="toast" style="z-index: 5">
     <div class="d-flex">
-      <div class="toast-body"><%=mensagem%></div>
+      <div class="toast-body"><%=mensagem.info%></div>
       <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Fechar"></button>
     </div>
   </div>
