reorganização dos componentes e att dos includes

--- a/public/views/components/cards/credito-card.ejs
+++ b/public/views/components/cards/credito-card.ejs
@@ -11,7 +11,7 @@
 </div>
 
 <div class="hide">
-  <%- include('./contratar-modal', {data: data}) %>
+  <%- include('../modals/contratar-modal', {data: data}) %>
 </div>
 
 <script>
