--- a/public/views/404.ejs
+++ b/public/views/404.ejs
@@ -12,7 +12,7 @@
     <script src="/public/js/bootstrap.min.js"></script>
   </head>
   <header class="navbar navbar-expand-lg navbar-light bg-light">
-    <%- include('./components/navbar') %>
+    <%- include('./components/basics/navbar') %>
   </header>
   <body>
     <div class="container text-center">
@@ -22,7 +22,7 @@
   </body>
 
   <footer>
-    <%- include('./components/login-modal') %> <%-
-    include('./components/register-modal') %>
+    <%- include('./components/modals/login-modal') %> <%-
+    include('./components/modals/register-modal') %>
   </footer>
 </html>
