adicionado elementos na pagina inicial

--- a/public/views/components/basics/navbar.ejs
+++ b/public/views/components/basics/navbar.ejs
@@ -1,4 +1,12 @@
+<link rel="stylesheet" href="/public/css/styles.css" />
+<link rel="stylesheet" href="/public/css/bootstrap.min.css" />
 <link rel="stylesheet" href="/public/css/components/navbar.css" />
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
+
+
+<script src="/public/js/bootstrap.min.js"></script>
 <nav class="container">
   <a class="navbar-brand" href="#"
     ><img
@@ -28,7 +36,7 @@
         >
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Soluções</a>
+        <a class="nav-link" href="#solucoes">Soluções</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Contato</a>
