--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -6,12 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CréditoParaTodxs - Crédito Pessoal Simplificado</title>
 
-    <link rel="stylesheet" href="/public/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="/public/css/styles.css" />
-
     <link rel="stylesheet" href="/public/css/components/credito.card.css" />
 
-    <script src="/public/js/bootstrap.min.js"></script>
+
     <script src="/public/js/main.js"></script>
     <script src="/public/js/parcelamento.js"></script>
   </head>
@@ -22,22 +19,25 @@
     <%- include('./components/toast/toast-message', {mensagem: message}) %>
     <%}%>
   <body>
-    <div class="container mt-3">
-      <div class="row">
-
-        <% creditos.forEach((credito) =>{%>
-          <div class="col mb-3">
-            <div class="container">
-              <%- include('./components/cards/credito-card', {data: credito}) %>
-            </div>
+    <div class="main">
+      <%- include('./components/content/header-content') %>
+      <div class="container mt-3">
+        <div class="row">
+          <div class="container text-center" id="solucoes">
+            <h2>Nossas soluções</h2>
+            <hr>
           </div>
-          <%})%>
-
-      </div>
-
-      </div>
-
-
+          <% creditos.forEach((credito) =>{%>
+            <div class="col mb-3">
+              <div class="container">
+                <%- include('./components/cards/credito-card', {data: credito}) %>
+              </div>
+            </div>
+            <%})%>
+  
+        </div>
+        </div>
+    </div>
     </div>
     <footer>
       <%- include('./components/modals/login-modal') %> 
