--- a/public/views/components/basics/navbar.ejs
+++ b/public/views/components/basics/navbar.ejs
@@ -8,7 +8,7 @@
 
 <script src="/public/js/bootstrap.min.js"></script>
 <nav class="container">
-  <a class="navbar-brand" href="#"
+  <a class="navbar-brand" href="/"
     ><img
       src="/public/images/logo.png"
       alt=""
@@ -36,10 +36,10 @@
         >
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#solucoes">Soluções</a>
+        <a class="nav-link" href="/#solucoes">Soluções</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Contato</a>
+        <a class="nav-link" href="/#sobre">Sobre Nós</a>
       </li>
     </ul>
     <ul class="navbar-nav">
