--- a/public/views/components/basics/navbar.ejs
+++ b/public/views/components/basics/navbar.ejs
@@ -5,35 +5,21 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
 
+<script src="/public/js/main.js"></script>
 
 <script src="/public/js/bootstrap.min.js"></script>
 <nav class="container">
-  <a class="navbar-brand" href="/"
-    ><img
-      src="/public/images/logo.png"
-      alt=""
-      width="auto"
-      height="50"
-      class="d-inline-block align-text-top"
-  /></a>
+  <a class="navbar-brand" href="/"><img src="/public/images/logo.png" alt="" width="auto" height="50"
+      class="d-inline-block align-text-top" /></a>
 
-  <button
-    class="navbar-toggler"
-    type="button"
-    data-bs-toggle="collapse"
-    data-bs-target="#navbarNav"
-    aria-controls="navbarNav"
-    aria-expanded="false"
-    aria-label="Toggle navigation"
-  >
+  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav m-auto">
       <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="/"
-          >Página Inicial</a
-        >
+        <a class="nav-link active" aria-current="page" href="/">Página Inicial</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/#solucoes">Soluções</a>
@@ -43,17 +29,14 @@
       </li>
     </ul>
     <ul class="navbar-nav">
-      <%if(user == null){%>
+      <%if(user==null){%>
         <li class="nav-item">
-          <button class="btn btn-primary"
-          type="button"
-          data-bs-toggle="modal"
-          data-bs-target="#login-modal">Entrar/Cadastrar</button>
+          <button class="btn btn-primary" type="button" data-bs-toggle="modal"
+            data-bs-target="#login-modal">Entrar/Cadastrar</button>
         </li>
         <%}else{%>
           <li class="nav-item">
-            <a class="btn btn-primary"
-            type="button" href="/profile">Meu Perfil</a>
+            <a class="btn btn-primary" type="button" href="/profile">Meu Perfil</a>
           </li>
           <%}%>
     </ul>
