--- a/public/views/pages/profile.ejs
+++ b/public/views/pages/profile.ejs
@@ -1,25 +1,37 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Perfil</title>
+    <title>Perfil - CréditoParaTodxs</title>
 </head>
 <header class="navbar navbar-expand-lg navbar-light bg-light">
     <%- include('../components/basics/navbar') %>
 </header>
+
 <body>
+    <% if(message.info !=null){%>
+        <%- include('../components/toast/toast-message', {mensagem: message}) %>
+    <%}%>
+
     <div class="main">
         <div class="container row mt-5">
-            <% if(emprestimos){%>
-                <%emprestimos.forEach((data)=>{%>
+            <% if(emprestimos.length){ %>
+                <%console.log('oi')%>
+                <% emprestimos.forEach((data)=>{ %>
                     <div class="col mb-3">
                         <%- include('../components/cards/credito-detalhes', {data: data}) %>
                     </div>
-                <%})%>
-            <%}%>
+                <% }) %>
+            <% } else {%>
+                <div class="container">
+                    <p>Você não possui nenhum contrato ainda! =(</p>
+                </div>
+            <% } %>
         </div>
     </div>
 </body>
+
 </html>
