adicionado step no input range

--- a/public/views/components/modals/contratar-modal.ejs
+++ b/public/views/components/modals/contratar-modal.ejs
@@ -13,7 +13,7 @@
             <div class="container text-center">
               <p id="currentValue-<%=data.id%>" class="text-align-center" style="color: var(--thirdy-color)"></p>
             </div>
-            <input type="range" class="form-range" min="100" max="20000" id="rangeSelect-<%=data.id%>"
+            <input type="range" class="form-range" min="100" max="20000" step="100" id="rangeSelect-<%=data.id%>"
               name="valueRange">
             <div class="d-flex justify-content-between">
               <span class="rangeMin fs-6 text-muted">R$ 100</span>
