--- a/public/views/components/content/header-content.ejs
+++ b/public/views/components/content/header-content.ejs
@@ -9,7 +9,7 @@
                 </div>
             </div>
             <div class="col text-center">
-                <img class="money" src="/public/images/money-pink.svg" alt="">
+                <img class="money" src="/public/images/money.svg" alt="">
             </div>
         </div>
     </div>
